3.6.2
        Bug fixes:
        - don't regenerate software_packages.csv every time (Redmine #6441)
        - improve verbose message for package_list_command
        - fix missing log output on AIX (Redmine #6434)
        - assorted fixes to dirname() esp on Windows (Redmine #4716)
        - fix package manager detection
        - fix build issues on FreeBSD
        - allow copying of dead symbolic links (Redmine #6175)
        - preserve order in readstringarrayidx (Redmine #6466)
        - fix passing of unexpanded variable references to arrays (Redmine #5893)
        - use entries for new {admin,deny}_{ips,hostnames} constraints in the relevant legacy
          lists (Redmine #6542)
        - cope with ps's numeric fields overflowing to the right
        - interpret failing function calls in ifvarclass as class not set (Redmine #6327)
        - remove unexpanded lists when extending lists (Redmine #6541)
        - infer start-time of a process from elapsed when needed (Redmine #4094)
        - fix input range definition for laterthan() function (Redmine ##6530)
        - don't add trailing delimiter when join()'ing lists ending with a null-value
          (Redmine #6552)

3.6.1
        New features:
        - Introduced Solaris and AIX support into the 3.6 series, with many associated build and
          bug fixes.

        Changes:
        - Short-circuit evaluation of classes promises if class is already set (Redmine #5241)
        - fix to assume all non-specified return codes are failed in commands promises (Redmine #5986)
        - cf-serverd logs reconfiguration message to NOTICE (was INFO) so that it's always logged in syslog

        Bug fixes:
        - File monitoring has been completely rewritten (changes attribute in files promise), which
          eliminates many bugs, particularly regarding files that are deleted. Upgrading will keep
          all monitoring data, but downgrading again will reinitialize the DB, so all files will be