@@ -1,3 +1,4 @@
+<<<<<<< HEAD
 3.6.2
         Bug fixes:
         - don't regenerate software_packages.csv every time (Redmine #6441)
@@ -18,6 +19,7 @@
         - fix input range definition for laterthan() function (Redmine ##6530)
         - don't add trailing delimiter when join()'ing lists ending with a null-value
           (Redmine #6552)
+        - Also enable shortcut keyword for cf-serverd classic protocol, eg to simplify the  bootstrap process for clients that have different sys.masterdir settings (Redmine #3697)
 
 3.6.1
         New features:
